# RunAwayRobot

./: CMakeLists.txt  package.xml  setup.py
behavior_trees/: navigate_w_replanning_and_recovery.xml
config/: bridge_config.yaml  camera_info.yaml  cartographer.lua  cartographer_config.lua  dvlc_config.yaml  mapping.rviz  nav2_params.yaml  nav2_view.rviz  robot.urdf  robot_config.yaml  sensor_calibration.yaml  slam.yaml  slam_config.yaml  slam_params.yaml  slam_view.rviz  twist_mux.yaml
launch/: calibrate_sensors.launch.py  cameras.launch.py  complete_slam_launch.py  distributed_slam_launch.py  dvlc_calibration.launch.py  gazebo_simulation.launch.py  minimal_slam.py  nav2_bringup.launch.py  nav2_custom_launch.py  nav2_navigation.launch.py  navigation.launch.py  odometry.launch.py  rf2o_odometry_launch.py  robot_hardware.launch.py  robot_navigation.launch.py  simulation.launch.py  slam_navigation.launch.py  slam_processing.launch.py  test_slam.py  transforms.launch.py  wall_following_slam_launch.py
motor_controller/: exploration_controller.py  hardware_controller.py  keyboard_control.py  nav2_hardware_bridge.py  nav2_lifecycle_manager.py  navigation_controller.py  navigation_interface.py  robot_simulator.py  test_communication.py  test_motors.py  test_navigation.py  wall_follower.py
motor_controller/controllers/: __init__.py  camera_controller.py  motor_controller.py  navigation_controller.py
motor_controller/models/: __init__.py  mapping_state.py  robot_state.py
motor_controller/nodes/: navigation_node.py  robot_hardware_node.py
motor_controller/processors/: __init__.py  frontier_processor.py  human_avoidance_controller.py  human_escape.py  image_flipper.py  lidar_processor.py  monte_carlo_planner.py  navigation_fsm.py  object_detector.py  obstacle_avoider.py  obstacle_monitor.py  path_planner.py  person_detector.py  robot_visualizer.py  sort.py  waypoint_generator.py
motor_controller/srv/: HumanDetected.srv  SetExplorationState.srv
urdf/: robot.urdf.xacro
worlds/: robot_room.world
