<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.1</version>
  <description>Robot navigation package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>slam_toolbox</depend>
  <depend>rf2o_laser_odometry</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 