<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.1</version>
  <description>Motor controller package with wall following capabilities</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rplidar_ros</depend>
  <depend>numpy</depend>
  <depend>python3-numpy</depend>
  <build_depend>rf2o_laser_odometry</build_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>

  <!-- Nav2 Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav_2d_utils</depend>
  <depend>dwb_core</depend>
  <depend>dwb_controller</depend>
  <depend>dwb_critics</depend>
  <depend>dwb_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <!-- Add TurtleBot4 dependencies -->
  <depend>turtlebot4_navigation</depend>

  <!-- Add these -->
  <depend>slam_toolbox</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- Add SMAC planner -->
  <depend>nav2_smac_planner</depend>
</package> 